--- a/ChiaPlotStatus.csproj
+++ b/ChiaPlotStatus.csproj
@@ -8,13 +8,15 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assets\en.yaml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.999-cibuild0013850-beta" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GUI\Models\" />
+    <PackageReference Include="GridExtra.Avalonia" Version="0.9.1" />
+    <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
   </ItemGroup>
 </Project>
