--- a/ChiaPlotStatus.csproj
+++ b/ChiaPlotStatus.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.999-cibuild0013850-beta" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.999-cibuild0013850-beta" />
+    <PackageReference Include="CsvHelper" Version="27.0.2" />
     <PackageReference Include="GridExtra.Avalonia" Version="0.9.1" />
     <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
   </ItemGroup>
