--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+    - name: Show Working Directory
+      run: ls -lah
     - name: Restore dependencies
       run: dotnet restore --configfile .\NuGet.Config ChiaPlotStatus.sln
     - name: Build
