--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Show Working Directory
       run: ls -lah
     - name: Restore dependencies
-      run: dotnet restore --configfile .\NuGet.Config ChiaPlotStatus.sln
+      run: dotnet restore --configfile NuGet.Config ChiaPlotStatus.sln
     - name: Build
       run: dotnet build --no-restore --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
     - name: Test
