--- a/ChiaPlotStatus.csproj
+++ b/ChiaPlotStatus.csproj
@@ -14,11 +14,11 @@
     <None Remove="Assets\en.yaml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.999-cibuild0013850-beta" />
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.999-cibuild0013850-beta" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.999-cibuild0013850-beta" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.999-cibuild0013850-beta" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.999-cibuild0013850-beta" />
+    <PackageReference Include="Avalonia" Version="0.10.3" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.3" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.10.3" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.3" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.3" />
     <PackageReference Include="CsvHelper" Version="27.0.2" />
     <PackageReference Include="GridExtra.Avalonia" Version="0.9.1" />
     <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
