--- a/ChiaPlotStatus.csproj
+++ b/ChiaPlotStatus.csproj
@@ -6,6 +6,7 @@
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>grayfallstown.pfx</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
+    <ApplicationIcon>Icon - Color changed.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
@@ -22,5 +23,18 @@
     <PackageReference Include="CsvHelper" Version="27.0.2" />
     <PackageReference Include="GridExtra.Avalonia" Version="0.9.1" />
     <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
