refs #7 hide finished was missing

--- a/Assets/en.yaml
+++ b/Assets/en.yaml
@@ -8,6 +8,7 @@ Fields:
     LogFolder: "Log Folders"
     RawExport: "Raw Export"
     HideHealthy: "Hide healthy"
+    HideFinished: "Hide finished"
     HidePossiblyDead: "Hide possibly Dead"
     HideConfirmedDead: "Hide confirmed Dead"
 
