project file was not updated / oktokit.net for updates was mising

--- a/ChiaPlotStatus.csproj
+++ b/ChiaPlotStatus.csproj
@@ -12,6 +12,7 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assets\en - Kopieren.yaml" />
     <None Remove="Assets\en.yaml" />
   </ItemGroup>
   <ItemGroup>
@@ -22,7 +23,13 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.3" />
     <PackageReference Include="CsvHelper" Version="27.0.2" />
     <PackageReference Include="GridExtra.Avalonia" Version="0.9.1" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="YamlDotNet" Version="11.1.3-nullable-enums-0003" />
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Update="Assets\en - Kopieren.yaml">
+      <SubType>Component</SubType>
+    </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="GUI\Views\MainWindow - Kopieren.axaml.cs">
