--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,11 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.platform }}
+  build-on-windows:
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
@@ -28,6 +24,56 @@ jobs:
       run: dotnet test --no-build --verbosity normal --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
     #- name: tree
     #  run: tree
+    - name: Publish
+      run: dotnet publish --self-contained -r win-x64 -c release -o publish -p:PublishSingleFile=true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: binaries-${{ matrix.platform }}
+        path: bin/Release/net5.0
+
+  build-on-linux:
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    #- name: Show Working Directory # does not work on windows as we are not in a powershell
+    #  run: ls -lah
+    - name: Restore dependencies
+      run: dotnet restore --configfile NuGet.Config ChiaPlotStatus.sln
+    - name: Build
+      run: dotnet build --no-restore --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
+    - name: Test
+      run: dotnet test --no-build --verbosity normal --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
+    #- name: tree
+    #  run: tree
+    - name: Publish
+      run: dotnet publish --self-contained -r linux-x64 -c release -o publish -p:PublishSingleFile=true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: binaries-${{ matrix.platform }}
+        path: bin/Release/net5.0
+
+  build-on-mac:
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    #- name: Show Working Directory # does not work on windows as we are not in a powershell
+    #  run: ls -lah
+    - name: Restore dependencies
+      run: dotnet restore --configfile NuGet.Config ChiaPlotStatus.sln
+    - name: Build
+      run: dotnet build --no-restore --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
+    - name: Test
+      run: dotnet test --no-build --verbosity normal --configuration .\ChiaPlotStatus.sln /p:Configuration=Release /p:Platform="Any CPU"
+    #- name: tree
+    #  run: tree
+    - name: Publish
+      run: dotnet publish --self-contained -r osx-x64 -c release -o publish -p:PublishSingleFile=true
     - uses: actions/upload-artifact@v2
       with:
         name: binaries-${{ matrix.platform }}
